SubBt/force-app/main/default/objects/Permit__c/Permit__c.object-meta.xml
<CustomObject>
    <label>Permit</label>
    <nameField>
        <label>Permit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>