SubBt/force-app/main/default/objects/Permit__c/fields/Create_on_New_Project__c.field-meta.xml
<CustomField>
    <fullName>Create_on_New_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create on New Project</label>
    <type>Checkbox</type>
</CustomField>