SubBt/force-app/main/default/objects/Permit__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <label>Inspector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>