SubBt/force-app/main/default/objects/Permit__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <displayFormat>PM-{000}</displayFormat>
    <label>Permit AN #</label>
    <type>AutoNumber</type>
</CustomField>