SubBt/force-app/main/default/objects/Permit__c/fields/Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Permit_Number__c</fullName>
    <label>Permit #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>