SubBt/force-app/main/default/objects/Permit__c/fields/Permit_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Sub_Type__c</fullName>
    <label>Permit Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>