SubBt/force-app/main/default/objects/Permit__c/fields/Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type__c</fullName>
    <label>Permit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Remodel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>